# sneaker-shop

./: .gitignore  README.md
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.js  App.jsx  adidas.js  baskets.js  brands.js  index.js  items.js  models.js  new_balance.js  nike.js  rathingItems.js
client/src/components/BasketTable/: BasketTable.css  BasketTable.jsx
client/src/components/BasketTableCellCount/: BasketTableCellCount.css  BasketTableCellCount.jsx
client/src/components/BasketTableCellImage/: BasketTableCellImage.jsx
client/src/components/BasketTableCellName/: BasketTableCellName.css  BasketTableCellName.jsx
client/src/components/BasketTableCellPrice/: BasketTableCellPrice.css  BasketTableCellPrice.jsx
client/src/components/BasketTableHeader/: BasketTableHeader.css  BasketTableHeader.jsx
client/src/components/BasketTableRow/: BasketTableRow.css  BasketTableRow.jsx
client/src/components/ColorSizeBlock/: ColorSizeBlock.css  ColorSizeBlock.jsx
client/src/http/: basketApi.js  brandApi.js  itemApi.js
client/src/store/: BasketStore.js  ItemStore.js
design/: func-map.drawio
server/lookout/: manage.py  pyproject.toml
server/lookout/api/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
server/lookout/api/migrations/: 0001_initial.py  0002_alter_footwear_options_and_more.py  0003_alter_images_image.py  0004_alter_images_image.py  0005_alter_images_image.py  0006_alter_images_image.py
server/lookout/lookout/: asgi.py  settings.py  urls.py  wsgi.py
(+61 files in other folders)
